--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 PORT = 8980
 MONGO_URI = mongodb+srv://utkarshkesharwani3:Priyanshu@cluster0.poriwtv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MYSQL_HOST=localhost
+MYSQL_USER=root
+MYSQL_PASSWORD=n3u3da!
+MYSQL_DATABASE=portfolio
 
 
 
