--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongoose": "^8.17.0",
+    "mysql2": "^3.14.3",
     "yahoo-finance2": "^2.13.3"
   }
 }
